--- a/text/appendix/app.tex
+++ b/text/appendix/app.tex
@@ -1,4 +1,4 @@
-%!TEX root = C:/Users/s118759/Google Drive/PHD/ThesisMain/main.tex
+%!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics
 \chapter{}
 \section{Velocity of constant-curvature model}
 
