--- a/text/1_chap/fem.tex
+++ b/text/1_chap/fem.tex
@@ -1,4 +1,4 @@
-%!TEX root = C:/Users/s118759/Google Drive/PHD/ThesisMain/main.tex
+%!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics
 \chapter{Soft Materials}
 \label{ch:3-sensing} 
 \section{Continuum mechanics}
