--- a/text/2_chap/model.tex
+++ b/text/2_chap/model.tex
@@ -1,4 +1,4 @@
-%!TEX root = C:/Users/s118759/Google Drive/PHD/ThesisMain/main.tex
+%!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics
 \chapter{Dynamics of Soft Robots}
 \label{ch:2-dynamics} 
 
