--- a/text/2_chap/3_hamilton/bib.bib
+++ b/text/2_chap/3_hamilton/bib.bib
@@ -34,3 +34,18 @@ title = {{A Mathematical Introduction to Robotic Manipulation}},
 volume = {53},
 year = {1994}
 }
+
+@book{Boyer2010,
+author = {Boyer, Frederic and Porez, Mathieu and Leroyer, Alban},
+booktitle = {Journal of Nonlinear Science},
+doi = {10.1007/s00332-009-9050-5},
+file = {:C$\backslash$:/Users/s118759/Google Drive/PHD/references{\_}papers/Boyer2010{\_}Article{\_}Poincar{\'{e}}CosseratEquationsForTh.pdf:pdf},
+isbn = {0033200990505},
+issn = {09388974},
+keywords = {Eel-like robots,Hyper-redundant locomotion,Lagrangian reduction,Lie groups,Poincar{\'{e}}-Cosserat equations,Swimming dynamics},
+number = {1},
+pages = {47--79},
+title = {{Poincar{\'{e}}-cosserat equations for the lighthill three-dimensional large amplitude elongated body theory: Application to robotics}},
+volume = {20},
+year = {2010}
+}
