--- a/text/2_chap/model.tex
+++ b/text/2_chap/model.tex
@@ -1,148 +1,13 @@
-%!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics
+%!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics\main.tex
 \chapter{Dynamics of Soft Robots}
 \label{ch:2-dynamics} 
 
-\section{Preliminary on Lie Group Theory}
-The analytical tools used in this work are derived from Lie group theory. Here, we give a brief preliminary on the basics of Lie groups and their associated Lie algebras whose properties will be used later for deriving the kinematic and dynamic model applicable to a set of soft robotic systems. 
-
-The Lie group encompasses the concepts of `group' and `smooth manifold' in a unique embodiment: a Lie group $\mathcal{G}$ is a smooth manifold whose elements satisfy the group axioms. Within the perspective of robotics, the Lie group is viewed as a smooth surface on which the states of the system evolve, that is, the manifold describes or is defined by constraints imposed on the state. The smoothness of the manifold implies there exists a unique tangent space for each point on the manifold. The tangent space of the Lie group at the identity is called the Lie algebra, and it allows us to perform algebra computation concerning the Lie group.
-
-\begin{definition} The group of orientation matrices can be identified with the orthogonal group $O(n)$, which are the matrices that satisfy $\mat{R}\mat{R}^\tr = \mat{I}$. Due its orthogonality, the determinant of these matrices are either $-1$ or $+1$. Orthogonal matrices with a determinant equivalent to $+1$ form a subgroup of $O(n)$ called the \textit{special orthogonal group} defined by $SO(n)$. In general, the set of special group of orthogonal matrices is defined by
-\begin{equation}
-\SO{n}:= \left\{ \mat{R}\in \R^{n \times n} \; | \; {\mat{R}} \mat{R}^\top = {\mat{R}}^\top \mat{R} = \mat{I}, \, \det(\mat{R}) = +1 \right\} \subset \R^{n\times n}.
-\end{equation}
-For the case $n = 3$, the group $\SO{3}$ is often referred to as the rotation group on $\R^3$.
-\end{definition}
-
-\begin{definition} The group of rigid body transformations on $\R^3$ is defined by the set of mapping $\vec{g}: \R^3 \to \R^3$ of the form $\vec{g} (\vec{x}) = \mat{R} \vec{x} + \vec{p}$ given a rotation matrix $\mat{R} \in \SO{3}$ and position vector $\vec{p} \in \R^3$. Alternatively, we can associate any rigid body transformation in $\R^3$ space by an element of the special euclidean group $\SE{3}$ such that $(\mat{R},\vec{p}) \in \SE{3}$. The set of special euclidean group $\SE{3}$ is defined by
-\begin{equation}
-\SE{3} := \left\{ \mat{g} \in \R^{4 \times 4} \;|\; \vec{g} = \begin{pmatrix} \mat{R} & \vec{p} \\ \vec{0}_3^\tr & 1 \end{pmatrix}, \, \mat{R} \in \SO{3},\, \vec{p} \in \R^3 \right\} \subset \R^{4\times 4}.
-\end{equation}\
-\end{definition}
-
-\begin{definition}[The Lie algebra] A Lie algebra is vector space $\mathfrak{g}$ endowed with an operation $[\,\cdot,\,\cdot\,]:\, \mathfrak{g} \times \mathfrak{g} \mapsto \mathfrak{g}$ called the Lie bracket or commuter, where the Lie bracket satisfies the following three axioms: 
-\begin{enumerate}
-\itemsep0.5em 
-\item Bilinearity: $[ax + by,z] = a[x,z] + b[y,z] \; \forall x,y\in \mathfrak{g}$ and $\forall a,b \in \R$
-\item Alternativity: $[x,x] =  0 \; \forall x\in \mathfrak{g}$
-\item The Jacobi identity: $$ [x,[y,z]] + [y,[z,x]] + [z,[x,y]] = 0 \;\; \forall x,y,z\in \mathfrak{g}$$
-\end{enumerate}
-\end{definition}
-
-\begin{definition}
-The Lie algebra of the group of three-dimensional rotations $\SO{3}$, denoted by $\so{3}$, can be identified with a $3 \times 3$ skew-symmetric matrix of the form:
-\begin{equation}
-\tilde{\vec{\omega}} = 
-\begin{pmatrix} 0 & -\omega_3 & \omega_2 \\ \omega_3 & 0 & -\omega_1 \\ -\omega_2 & \omega_1 & 0 \end{pmatrix} \quad \text{with} \quad \omega \in \R^3
-\end{equation}
-endowed with the bracket operations $[\tilde{\omega}_1,\tilde{\omega}_2] = \tilde{\omega}_1\tilde{\omega}_2 - \tilde{\omega}_2 \tilde{\omega}_1$, where the mapping $\tilde{(\,\cdot\,)}: \R^3 \mapsto \so{3}$ denotes the isomorphism between vector representation and the Lie algebra.
-\end{definition}
-
-\begin{definition}
-The Lie algebra of the group of rigid body transformations $\SE{3}$, denoted by $\se{3}$, can be identified with a $4 \times 4$ matrix of the form:
-\begin{equation}
-\hat{\mat{\xi}} = 
-\begin{pmatrix} \tilde{\mat{X}} & \vec{Y} \\ 0 & 0 \end{pmatrix} \quad \text{with} \quad X,Y \in \R^3
-\end{equation}
-endowed with the bracket operations $[\hat{\xi}_1,\hat{\xi}_2] = \hat{\xi}_1\hat{\xi}_2 - \hat{\xi}_2 \hat{\xi}_1$, where the mapping $\hat{(\,\cdot\,)}: \R^6 \mapsto \se{3}$ denotes the isomorphism between vector representation and the Lie algebra.
-
-\end{definition}
-% The mapping $\hat{(\,\cdot\,)}: \R^6 \mapsto \se{3}$ denotes the isomorphism between $\R^6$ and $\se{3}$, and $\tilde{(\,\cdot\,)}: \R^3 \mapsto \so{3}$ denotes the isomorphism between $\R^3$ and $\so{3}$. Therefore, the spatial derivative of $g$ along $\mathcal{X}$ can be intuitively described by a linear operation between $\vec{\xi} = (\vec{K},\vec{T}) \in \R^6$ expressed in the Lie algebra $\se{3}$ and itself.
-
-\section{Curve kinematics using Lie groups}
-In contrast to a rigid robot, whose mechanical structure consists of static links and joints, a soft robot lacks the physical notion of joints and therefore cannot be viewed as a single- or multi-body. From a mechanical perspective, a soft robotic system is more closely related to a continuous deformable medium with infinite degrees-of-freedom than a large multi-bodied system. Given this notion, the joint space of the soft robot is characterized in space and time. To characterized the spatial dimension along this curve, let us introduce a spatial parameter $\sigma \in \mathcal{X}$ with $\mathcal{X} \in [0,L] \subset \R$ (where $L \in \Rsp$ is the undeformed length of the soft robot). The spatial parameter $\sigma$ represents a material point inside the hyper-flexible body of soft robot, or more precisely, located at the center of a cross section of the continuous body at length $\sigma$. 
-
-Considering a time-invariant case, the configuration of a material point at $\sigma$ can be described by a position vector $\vec{p}(\sigma) \in \R^3$ and an orientation matrix $\mat{R}(\sigma) \in \SO{3}$ associated with a coordinate frame of orthonormal vectors. The configuration space of hyper-flexible soft robotic body can be denoted by a smooth curve $g:\mathcal{X} \mapsto \SE{3}$ such that
-\begin{equation}
-\vec{g}(\sigma) = \begin{pmatrix} \mat{R} & \vec{p} \\ \vec{0}_3^\tr & 1 \end{pmatrix} \in SE(3). 
-\end{equation}
-with $\mat{R}$ and $\vec{p}$ being the rotation and translation components of $g$ respectively. For the sake of brevity, we use the notations ``dot'' and ``prime'' to denote the time and spatial derivatives $\partial(\cdot)/\partial t$ and $\partial(\cdot)/\partial \sigma$, respectively. From continuum mechanics, the strain is defined by the spatial derivative of the configuration of material solid.
-
-\begin{lemma}
-\label{lemma:g_deriv}
-Given a smooth curve $g: \mathcal{X} \mapsto \SE{3}$ that is parameterized by a field $\mathcal{X} \subseteq \R$, analogous to the Lie algebra of $SE(3)$, it follows that the derivative of $\vec{g}$ with respect to the field $\mathcal{X}$ can be written as a linear operation of its Lie algebra and $g$ itself, that is,
-\begin{align}
-\vec{g}' & = \vec{g}\hat{\xi} \quad \text{with} \quad \hat{\xi} = \begin{pmatrix} \mat{X} & \vec{Y} \\ \vec{0}_3^\tr & 0 \end{pmatrix} \in \se{3},  \label{eq:gprime}
-\end{align}
-where $\xi$ belongs to the Lie algebra of the group $\SE{3}$ with $\mat{X} \in \so{3}$ and $\vec{Y} \in \R^3$. 
-\end{lemma}
-
-\begin{proof}
-Let $\vec{g}: \mathcal{X} \mapsto \SE{3}$ such that the rigid body transformation is described by a orientation matrix $R(\sigma) \in \SO{3}$ and a position vector $p(\sigma) \in \R^3$. By definition, it inherently follows that spatial derivative of the position vector, i.e., $\vec{p}': \mathcal{X} \mapsto \R^3$, describes the tangent space of this parameterized curve. If we assume $\vec{Y} \in \R^3$ to be the tangent vector at the identity of the Lie group, i.e., $g(0) = e$, we can express the translation vector $p$ as the integral over its tangent space as
-\begin{equation}
-\vec{p} = \int_\mathcal{X} \mat{R}(\eta) \vec{Y}(\eta) \; d\eta. \label{eq:pos_vector_p_sigma}
-\end{equation}
-From \eqref{eq:pos_vector_p_sigma}, it follows that the evolution of the tangent vector along $\mathcal{X}$ is characterized by $\vec{p}' = R Y$. Secondly, given the orthogonality properties of $R \in \SO{3}$, we can write
-\begin{align}
-\left( R^\tr R \right)' = \left( \mat{I} \right)' \quad \Longrightarrow \quad \left(\mat{R}^\tr \right)'\!\mat{R} + \mat{R}^\tr \mat{R}' = \mat{0}.
-\end{align}
-Let us denote ${\mat{X}} = \mat{R}^\tr \mat{R}'$. Then, it follows that 
-\begin{align}
- \mat{X}^\tr & = \left(\mat{R}'\right)^\tr \mat{R} \notag \\ 
-& = \frac{d}{d\sigma}\left(\mat{R}^{-1} \right) \mat{R} \notag \\ 
-& = -\mat{R}^{-1} \mat{R}' \mat{R}^{-1} \mat{R} = -\mat{X},
-\end{align}
-where ${\mat{X}}$ belongs to the group of skew-symmetric matrices. Therefore, the variational nature of the orientation matrix along $\mathcal{X}$ can be characterized by $\vec{R}' = R \mat{X}$. Given the expressions for $\vec{p}'$ and $\mat{R}'$, we find $g' = (\mat{R}',\vec{p}') = (\mat{R}{\mat{X}},\mat{R}\vec{Y}) = g\hat{\vec{\xi}}$ with $\hat{\vec{\xi}} = (\vec{X},{\mat{Y}}) \in \se{3}$. Furthermore, we may observe that the tangent space at the identity of the group, i.e., $g(0) = e$, indeed corresponds to the Lie algebra of $\SE{3}$.
-\end{proof}
-
-In continuation of our analysis, we will discuss the time-variant case of configuration space, which is described in spatial and temporal domain. Analogous to the spatial dimension $\mathcal{X}$, we introduce a temporal dimension $t \in \mathcal{T}$ over a fixed time interval $\mathcal{T} \in [t_1, t_2]$. Hence, the time-variant configuration space of the soft robot can be defined by 
-\begin{equation}
-g: \mathcal{X} \times \mathcal{T} \mapsto \SE{3}.
-\label{eq:g_time_pos}
-\end{equation}
-According to Lemma \ref{lemma:g_deriv}, the variations in space and time concerning the configuration space $g$ given in \eqref{eq:g_time_pos} can thus be described by two corresponding vector fields $\vec{\xi}$ and $\vec{\eta}$ from $\mathcal{X} \mapsto \se{3}$ that are expressed by
-\begin{equation}
-{\vec{\xi}} = \left( \vec{g}^{-1} \vec{g}'\right)^\vee,
-\end{equation}
-\begin{equation}
-{\vec{\eta}} = \left( \vec{g}^{-1} \dot{\vec{g}}\right)^\vee,
-\end{equation}
-where $\eta \in \R^6$ represents the vector field of the velocity twist, and $\xi  \in \R^6$ is the geometric counterpart of $\eta$ that may be regard as the vector field of the strain, and $(\,\cdot\,)^\vee: \se{3} \mapsto \R^6$ an isomorphism between the Lie algebra and its column vector representation. From the equality $\left(\dot{\vec{g}} \right)' = \dot{\left( \vec{g}' \right)}$, we can relate the strain and velocity field as follows
-\begin{align}
-\vec{g}' \hat{\vec{\eta}} + \vec{g} \hat{\vec{\eta}}' & =  \dot{\vec{g}} \hat{\vec{\xi}} + \vec{g} \dot{\hat{\vec{\xi}}} \quad \Longleftrightarrow \quad
-\hat{\vec{\eta}}' = -\left[\hat{\vec{\xi}}\hat{\vec{\eta}},\, - \hat{\vec{\eta}}\hat{\vec{\xi}}\right] + \dot{\hat{\xi}} 
-\end{align}
-It is worth mentioning that one can formulate the equality above to the following compatibility equation as $\hat{\vec{\eta}}' - \dot{\vec{\xi}} = - [\hat{\vec{\xi}},\hat{\vec{\eta}}]$, where $[\,\cdot,\,\cdot\,]$ corresponds to the Lie bracket. 
-\begin{align}
-\vec{g}' & = \vec{g} \hat{\vec{\xi}} & &  \text{(configuration)}\\
-\vec{\eta}' & = -\ad_\vec{\xi} \vec{\eta} + \dot{\vec{\xi}} & & \text{(velocity)}\\
-\dot{\vec{\eta}}' & = -\ad_{\dot{\vec{\xi}}} \vec{\eta} + \ad_\vec{\xi} \dot{\vec{\eta}} + \ddot{\vec{\xi}} & & \text{(acceleration)}
-\end{align}
-% The differential geometry in \eqref{eq:gprime} leads to a key observation. Note that the equality in \eqref{eq:gprime} forms an ordinary differential equation of unknown functions $\vec{g}$ and its derivate $\vec{g}'$ that is parameterized by the strain field $\xi \in \se{3}$ along its spatial domain $\mathcal{X}$. Therefore, given an initial condition $\vec{g}(0) = \vec{g}_0$ and the strain field $\xi: \mathcal{X} \mapsto \R^6$, one can completely reconstruct the configuration of the spatial curve $\vec{g}\in\SE{3}$ with little effort. Mathematically, the relation between the Lie group and its associated Lie algebra can be expressed by integration of strain field in the algebra into the group structure as follows:
-
-% \begin{equation}
-% \begin{cases}
-% g'(\sigma) = g(\sigma) \hat{\xi}(\sigma) \\
-% g(0) = g_0
-% \end{cases}
-% \end{equation}
-
+\input{./text/2_chap/1_liegroup/text.tex}
+\input{./text/2_chap/2_config/text.tex}
+%\input{./text/2_chap/2_curvekin/text.tex}
 \newpage
-\section{Dynamics through Hamilton's variational principle}
-Hamilton's variational principle is a powerful technique to derive the equation of motion for dynamical systems. It states that the evolution in time of a state vector $q(t)$ between two specific states $q_1 = q(t_1)$ and $q_2 = q(t_2)$ over a fixed time interval $[t_1,t_2]$ is a stationary point regarding the action functional, $\mathcal{S} = \int_{t_1}^{t_2} \mathcal{L}(\vec{q},\dot{q},t) \; dt$ with $\mathcal{L}(\vec{q},\dot{\vec{q}}) := \mathcal{T}(\vec{q},\dot{\vec{q}}) - \mathcal{V}(\vec{q})$ the Lagrangian function. An extension on Hamilton's principle includes external potential contributions, which can be formally written as
-\begin{equation}
-\delta(\mathcal{S}) = \int_{t_1}^{t_2} \left[\delta(\mathcal{T}) - \delta(\mathcal{V}) + \delta(\mathcal{V}_{ex}) \right]\; dt = 0,
-\end{equation}
-where $\delta(\cdot)$ represents the variation over a functional vector field, i.e., denoting a small change to the input. The variation of the kinetic energy is given by
-\begin{equation}
-\delta(\mathcal{T}) = \int_{\mathcal{X}} \delta(\vec{\eta})^\tr \mat{M} \vec{\eta}, \label{eq:c2_1.18}
-\end{equation}
-Expressing the variation to the vector field of velocity, we find $\delta(\vec{\eta}) = \dot{\vec{\epsilon}} + \hat{\vec{\eta}} \vec{\epsilon}$. Therefore, substitution of the variation into the equality above leads to 
-\begin{align}
-\int_{t_1}^{t_2} \delta(\mathcal{T}) & = 
-\left[ \int_\mathcal{X} \vec{\epsilon}^\tr \mat{M} \vec{\eta} \right]_{t_0}^{t_1} +  \int_{t_1}^{t_2} \!\! \int_\mathcal{X}  \vec{h}^\tr \! \left( M\dot{\vec{\eta}} - \hat{\vec{\eta}}^\tr \! M \vec{\eta}\right)\; d\sigma dt
-\end{align}
+\input{./text/2_chap/3_hamilton/text.tex}
 
-The internal strain energy of the soft robot is defined as
-\begin{equation}
-\mathcal{V}_{in} := \frac{1}{2}\int_\mathcal{X} \vec{\xi}^\tr\! \vec{\Lambda} \;d\sigma.
-\end{equation}
-
-where $\vec{\Lambda} \in \R^6$ is the vector field representing the internal forces of the stress resultants over the continuum body. These internal force vector field and the strains vector field are related through a material constitutive law. In general concerning soft robotic applications, the use of linear constitutive relations for an isotropic elastic material are not sufficient, since large deformations introduce nonlinear material behavior. However, for the sake of simplicity, we consider the simplest viscoelastic constitutive model - the Kelvin-Voigt model. The Kelvin-Voigt model is a linear elasticity model with a linear viscous contribution that is proportional to the rate of strain $\vec{\xi}$, 
-\begin{equation}
-\vec{\Lambda} = \mat{K}\vec{\xi} + \mat{\Gamma} \dot{\vec{\xi}}
-\end{equation}
-where $\mat{K}$ and $\mat{\Gamma}$ are the elasticity and viscosity material tensor, respectively.
 % \clearpage
 % \clearpage
 % \section{Kinematics}
