--- a/main.tex
+++ b/main.tex
@@ -1,21 +1,26 @@
-\documentclass{phd}
-
-\title{Towards Systematic Design and Control \\ of Soft Robotics}
+\documentclass[12pt]{phd}
+\title{Towards Systematic Design and Control of Soft Robotics}
 \author{Brandon Jonathan Caasenbrood}
 \college{Eindhoven University of Technology}
 \degree{Doctor of Philosophy}
 \degreedate{maandag 28 mei 2022 }
-\degreetime{16.00 }
+\degreetime{16.00}
 \birthplace{Roermond}
 \rectormagnificus{prof. dr. F.P.T. Baaijens}
 
 \begin{document}
 \maketitle
-
 %\include{text/1_chap/fem}
-\include{text/2_chap/model}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Dynamics of Soft Robots}
+\label{ch:2-dynamics} 
+\input{./text/2_chap/1_liegroup/text}
+\input{./text/2_chap/2_config/text}
+\input{./text/2_chap/3_hamilton/text}
 
 \appendix
 %\include{text/appendix/app}
-
+\bibliography{C:/Users/s118759/Documents/GitHub/ThesisSoftRobotics/bib}
+\bibliographystyle{plain}
 \end{document}
