--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{phd}
-\title{Towards Systematic Design and Control of Soft Robotics}
+\title{Towards Design and Control \\ of Soft Robotic Systems}
 \author{Brandon Jonathan Caasenbrood}
 \college{Eindhoven University of Technology}
 \degree{Doctor of Philosophy}
@@ -13,14 +13,17 @@
 %\include{text/1_chap/fem}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Dynamics of Soft Robots}
-\label{ch:2-dynamics} 
-\input{./text/2_chap/1_liegroup/text}
-\input{./text/2_chap/2_config/text}
-\input{./text/2_chap/3_hamilton/text}
-
+%\chapter{Dynamics of Soft Robots}
+% \label{ch:2-dynamics} 
+% \input{./text/2_chap/1_liegroup/text}
+%\input{./text/2_chap/2_config/text}
+%\input{./text/2_chap/2_curvekin/text}
+%\input{./text/2_chap/3_hamilton/text}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\chapter{Control of Soft Robots}
+%\input{./text/3_chap/1_underact/text}
 \appendix
-%\include{text/appendix/app}
+\input{./text/appendix/1_lie_group/text}
 \bibliography{C:/Users/s118759/Documents/GitHub/ThesisSoftRobotics/bib}
 \bibliographystyle{plain}
 \end{document}
