--- a/text/2_chap/2_config/text.tex
+++ b/text/2_chap/2_config/text.tex
@@ -1,3 +1,28 @@
 %!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics\main.tex
-\section{Configuration spaces}
-In contrast to a rigid robot, whose mechanical structure consists of static links and joints, a soft robot lacks the physical notion of joints and therefore cannot be viewed as a single- or multi-body. From a mechanical perspective, a soft robotic system is more closely related to a continuous deformable medium with infinite degrees-of-freedom rather than a hyper-redundant system. Given this notion, the hyper-flexible soft robot is modeled as a one-dimensional Cosserat beam together with the geometrically exact beam theories proposed by \cite{Simo1986}. The main idea is to regard the material solid as a series of infinitesimally thin (semi)-rigid body that co-align with a spatial curve passing through the geometrical center of each cross-section. To characterized the spatial dimension along this curve, let us introduce a spatial parameter $\sigma \in \mathcal{X}$ with $\mathcal{X} \in [0,L] \subset \R$ (where $L \in \Rsp$ is the undeformed length of the soft robot). To further elaborate its physical notation, the spatial parameter $\sigma$ represents a material point inside the hyper-flexible body of soft robot, or more precisely, located at the center of the cross section of the continuous elastic body at $\sigma$. 
+\section*{Configuration space using Lie group theory}
+In contrast to a rigid robot, whose mechanical structure consists of static links and joints, a soft robot lacks the physical notion of joints and therefore cannot be viewed as an ordinary multi-body. From a mechanical perspective, a soft robotic system is more closely related to a continuous deformable medium with infinite degrees-of-freedom rather.
+Given this notion, a soft robotic system can be modeled as a one-dimensional Cosserat beam together with the geometrically exact beam theories proposed by \cite{Simo1986}. 
+
+To define a spatial coordinate frame, let us introduce a parameter $\sigma \in \mathcal{X}$ that lies on a bounded domain $\mathcal{X} \in [0, l] \subset \R$ (with $l \in \Rsp$ the extensible length of the soft robot). Given this description, we can represent the position $p(\sigma,t) \in \R^3$ and orientation matrix $R(\sigma,t) \in \SO{3}$ for any point $\sigma$ on the smooth backbone of the soft robot by a functional curve $g: \mathcal{X} \times \R \mapsto \SE{3}$, that is, 
+\begin{equation}
+g(\sigma,t) := \begin{pmatrix}
+\mat{R}(\sigma,t) & p(\sigma,t) \\ 0_{3}^\tr & 1 
+\end{pmatrix} \in \SE{3},
+\label{eq:g}
+\end{equation}
+where $\SE{3}$ is the Lie group of rigid body transformations in $\R^3$ \cite{Murray1994,Spong2006}. 
+
+Since the backbone curve $g$ is space-time variant, the variations in space and time can be characterized by two vector field in the Lie algebra $\se{3}$. Throughout this work, we denote the partial derivatives ${\partial (\cdot)}/{\partial \sigma}$ and ${\partial (\cdot)}/{\partial t}$  by a `prime' and `dot', respectively. By regarding the partial derivative with respect to time of \eqref{eq:g}, the time-twist field can be defined as follows
+\begin{equation}
+\dot{g} = g \hat{\eta}\; \implies \; \hat{\eta} := g^{-1} \dot{g} = \begin{pmatrix} {\Omega}_\times & V \\ 0_3^\tr & 0 \end{pmatrix} \in \se{3},
+\label{eq:eta}
+\end{equation}
+where $\Omega = (\omega_1, \omega_2, \omega_3)^\tr$ and $V = (v_1, v_2, v_3)^\tr$ denote the angular velocity vector and the linear velocity vector, respectively. Note that in \eqref{eq:eta} we used a property of the Lie algebra $\so{3} \cong \R^3$ with the isomorphism $\Omega \mapsto \Omega_\times$ \cite{Murray1994}. To be more specific on geometric interpretation, the vector field $\eta(\sigma,t)$ defines the infinitesimal local transformation undergone by a frame at position $\sigma$ between two infinitesimally close instances $t$ and $t + dt$. Second, by regarding the partial derivative with respect to space of \eqref{eq:g}, the space-twist field can be defined as follows
+\begin{equation}
+{g}' = g \hat{\xi} \; \implies \; \hat{\xi} :=  g^{-1} g' = \begin{pmatrix} {K}_\times & E \\ 0_3^\tr & 0 \end{pmatrix} \in \se{3},
+\label{eq:xi}
+\end{equation}
+where $K = (k_1, k_2, k_3)^\tr$ and $E = (\varepsilon_1, \varepsilon_2, \varepsilon_3)^\tr$ denote the curvature-torsion strain vector and the stretch-shear strain vector, respectively. Similar to its geometric counterpart, the vector field $\xi(\sigma,t)$ defines the infinitesimal local transformation undergone by a frame at an instance $t$ between two infinitesimally close positions $\sigma$ and $\sigma + d\sigma$. Since $\se{3} \cong \R^6$, we can express\eqref{eq:eta} and \eqref{eq:xi} as a column vector in $\R^6$ as follows
+\begin{equation}
+\eta(\sigma,t) = \begin{pmatrix} \Omega \\ V \end{pmatrix}; \; \quad \;  \xi(\sigma,t) = \begin{pmatrix} K \\ E \end{pmatrix}.
+\end{equation}
