--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{phd}
-\title{Towards Design and Control \\ of Soft Robotic Systems}
+\title{Toward Design and Control \\ of Soft Robots}
 \author{Brandon Jonathan Caasenbrood}
 \college{Eindhoven University of Technology}
 \degree{Doctor of Philosophy}
