--- a/main.tex
+++ b/main.tex
@@ -20,8 +20,9 @@
 %\input{./text/2_chap/2_curvekin/text}
 %\input{./text/2_chap/3_hamilton/text}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\chapter{Control of Soft Robots}
-%\input{./text/3_chap/1_underact/text}
+\chapter{Control of Soft Robots}
+\input{./text/3_chap/1_underact/text}
+
 \appendix
 \input{./text/appendix/1_lie_group/text}
 \bibliography{C:/Users/s118759/Documents/GitHub/ThesisSoftRobotics/bib}
