--- a/text/3_chap/1_underact/text.tex
+++ b/text/3_chap/1_underact/text.tex
@@ -1,4 +1,4 @@
-%!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics\main.tex
+%!TEX root = /home/brandon/Documents/phd/thesis/ThesisSoftRobotics/main.tex
 
 % \section{Definitions}
 % The general class of the second-order dynamical system can be written as a system of differential equations of the form
@@ -35,19 +35,15 @@ a sufficient condition is $\rank \left(f_2(q,\dot{q},t)\right) < \dim(q)$.
 
 \noindent In other words, an under-actuated dynamical system cannot steer its states in any arbitrary direction. As a consequence, underactuated systems are generally more difficult to control. By definition, a soft robotic system is an under-actuated system since they theoretically poses infinitely many degrees-of-freedom. Including the distributed control inputs to the Lagrangian model, we write the dynamics for a soft robotic system as follows
 \begin{equation}
-M(q)\ddot{q} + c(q,\dot{q}) + g(q)= S(q) u,
+M(q)\ddot{q} + c(q,\dot{q}) + g(q)= S^\top(q) u,
 \end{equation}
 
-\noindent where $M(q)$ is the positive definite mass matrix, $c(q,\dot{q})\in \R^{n}$ is a vector of Coriolis forces, $g(q)\in \R^{n}$ a vector of conservative potential forces, $S(q) \in \R^{n\times m}$ is a (nonlinear) mapping that projects the active control inputs onto the acceleration joint space of ${q}$, and $u(t) \in \R^{m}$ is the lower-dimensional control input. Since the system is under-actuated, it shall be clear that $\dim(u) < \dim(q)$. In literature \cite{Santina2019}, the matrix $S$ is referred to as the synergy matrix whose columns describe actuation patterns of the soft robot's input space. Without loss of generality, let the synergy matrix $S$ be defined by a set of linearly independent column vectors of actuation patterns $s_i: \R^n \to \R^n$,
+\noindent where $M(q)$ is the positive definite mass matrix, $c(q,\dot{q})\in \R^{n}$ is a vector of Coriolis forces, $g(q)\in \R^{n}$ a vector of conservative potential forces, $S(q) \in \R^{n\times m}$ is a (nonlinear) mapping that projects the active control inputs onto the acceleration pace of ${q}$, and $u(t) \in \R^{m}$ is the lower-dimensional control input. Since the system is under-actuated, it shall be clear that $\dim(u) < \dim(q)$. In literature \cite{Santina2019}, the matrix $S$ is referred to as the synergy matrix whose columns describe actuation patterns of the soft robot's input space. Without loss of generality, let the synergy matrix $S$ be defined by a set of linearly independent column vectors of actuation patterns $s_i: \R^n \to \R^n$,
 \begin{align}
 S(q) := \left\{\,s_1(q),\,s_2(q),\,...,\,s_m(q)\,\right\}, 
 \end{align}
 which implies that the matrix has full row-rank $\rank(S) = m$. 
-% \begin{equation}
-% S = \row \left\{B^\tr \!J(0,\sigma_1,q),\, B^\tr\!J(\sigma_1,\sigma_2,q),\, ...., B^\tr\![J(\sigma_m,q) - J(\sigma_{m-1},q)] \right\}
-% \end{equation}
 
-% \noindent where $J(\sigma_i,q) \in \R^{6\times n}$ is a geometric Jacobian matrix of the $i$-th control input related to a particular point $\sigma_{i-1} < \sigma_i < \sigma_{i+1} $ with $i \in [1,m]$ on the continuous body, and $B \in \R^{6\times n_a}$ is a selection matrix for the generalized wrenches in $\R^6$. 
 \section{Operational space formulation}
 The task of a robotic system is commonly formulated in terms of the end-effector position, velocity, or environmental force. As such, regardless of the dimensionality of the joint space, the control synthesis is typically specified by subpart of the robotic system. Let us introduce a state vector $x \in \R^k$ denoting the task or operational space of the soft robotic system with $\dim(x) < \dim(q)$. Mathematically, the operational space can be described using a continuously differentiable output map $h: \R^n \mapsto \R^k$ such that $x = h(q)$. Differentiation with respect to time gives rise to
 \begin{align}
