--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 \rectormagnificus{prof. dr. F.P.T. Baaijens}
 
 \begin{document}
-\maketitle
+%\maketitle
 %\include{text/1_chap/fem}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -25,6 +25,7 @@
 
 \appendix
 \input{./text/appendix/1_lie_group/text}
-\bibliography{C:/Users/s118759/Documents/GitHub/ThesisSoftRobotics/bib}
+\input{./text/appendix/2_geometric_jacobian/text}
+\bibliography{/home/brandon/Documents/phd/thesis/ThesisSoftRobotics/bib}
 \bibliographystyle{plain}
 \end{document}
