--- a/text/appendix/1_lie_group/text.tex
+++ b/text/appendix/1_lie_group/text.tex
@@ -1,4 +1,4 @@
-%!TEX root = C:\Users\s118759\Documents\GitHub\ThesisSoftRobotics\main.tex
+%!TEX root = /home/brandon/Documents/phd/thesis/ThesisSoftRobotics/main.tex
 \chapter{Fundamentals on \\ \vspace{5mm} Lie Group Theory}
 In this chapter, we will discuss the fundamentals on Lie groups and their associated Lie algebras.
 
