--- a/bib.bib
+++ b/bib.bib
@@ -78,6 +78,13 @@
 	year = {2020 (accepted)}
 }
 
+% under-actuated robotics
+@inproceedings{Tedrake2009,
+  title={Underactuated Robotics: Learning, Planning, and Control for Ecient and Agile Machines Course Notes for MIT 6.832},
+  author={Russ Tedrake},
+  year={2009}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% CONTROL OF SOFT ROBOTICS  %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -117,4 +124,28 @@ number = {1},
 title = {{A Unified Approach for Motion and Force Control}},
 volume = {3},
 year = {1987}
+}
+
+@inproceedings{Spong1998,
+author="Spong, Mark W.",
+title="Underactuated mechanical systems",
+booktitle="Control Problems in Robotics and Automation",
+year="1998",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="135--150",
+isbn="978-3-540-40913-7"
+}
+
+@article{Spong1996,
+title = "Energy Based Control of a Class of Underactuated Mechanical Systems",
+journal = "IFAC Proceedings Volumes",
+volume = "29",
+number = "1",
+pages = "2828 - 2832",
+year = "1996",
+issn = "1474-6670",
+doi = "https://doi.org/10.1016/S1474-6670(17)58105-7",
+url = "http://www.sciencedirect.com/science/article/pii/S1474667017581057",
+author = "Mark W. Spong",
 }
