--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Control of Soft Robots}
 \input{./text/3_chap/1_underact/text}
+%\input{./text/3_chap/2_dis_shp/text}
+\input{./text/3_chap/3_part_fbk/text}
 
 \appendix
 \input{./text/appendix/1_lie_group/text}
