--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{phd}
-\title{Toward Design and Control \\ of Soft Robots}
+\title{Towards Design and Control \\ of Soft Robots}
 \author{Brandon Jonathan Caasenbrood}
 \college{Eindhoven University of Technology}
 \degree{Doctor of Philosophy}
@@ -22,7 +22,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Control of Soft Robots}
 \input{./text/3_chap/1_underact/text}
-%\input{./text/3_chap/2_dis_shp/text}
+\input{./text/3_chap/2_dis_shp/text}
 \input{./text/3_chap/3_part_fbk/text}
 
 \appendix
