--- a/main.tex
+++ b/main.tex
@@ -26,8 +26,8 @@
 \input{./text/3_chap/3_part_fbk/text}
 
 \appendix
-\input{./text/appendix/1_lie_group/text}
-\input{./text/appendix/2_geometric_jacobian/text}
+%\input{./text/appendix/1_lie_group/text}
+%\input{./text/appendix/2_geometric_jacobian/text}
 \bibliography{/home/brandon/Documents/phd/thesis/ThesisSoftRobotics/bib}
 \bibliographystyle{plain}
 \end{document}
