--- a/text/3_chap/1_underact/text.tex
+++ b/text/3_chap/1_underact/text.tex
@@ -20,7 +20,7 @@
 
 %\newpage
 \section{Underactuated system}
-Before addressing the controller synthesis, we briefly introduce the notion of under-actuated dynamical systems \cite{Tedrake2009,Santina2019,Spong1998,Spong1996}. 
+Before addressing the controller synthesis, we briefly introduce the notion of under-actuated dynamical systems \cite{Santina2019,Spong1996,Spong1998,Tedrake2009}. 
 
 \begin{definition}[Under-actuated system]
 A second-order dynamical system described by the partial differential equation
@@ -36,14 +36,15 @@ a sufficient condition is $\rank \left(f_2(q,\dot{q},t)\right) < \dim(q)$.
 
 \noindent In other words, an under actuated dynamical system cannot steer its states in any arbitrary direction. As a consequence, under actuated systems are generally more difficult to control. By definition, a soft robotic system is an under-actuated system since they theoretically posses infinitely many degrees-of-freedom. Including the distributed control inputs to the Lagrangian model, we write the dynamics for a soft robotic system as follows
 \begin{equation}
-M(q)\ddot{q} + c(q,\dot{q}) + g(q)= S^\top(q) u,
+M(q)\ddot{q} + c(q,\dot{q}) + g(q)= S_a^\top(q) \tau,
+\label{eq:under_actuated_ode}
 \end{equation}
 
-\noindent where $M(q)$ is the positive definite mass matrix, $c(q,\dot{q})\in \R^{n}$ is a vector of Coriolis forces, $g(q)\in \R^{n}$ a vector of conservative potential forces, $S(q) \in \R^{n\times m}$ is a (nonlinear) mapping that projects the active control inputs onto the acceleration space of ${q}$, and $u(t) \in \R^{m}$ is the lower-dimensional control input. Since the system is under-actuated, it shall be clear that $\dim(u) < \dim(q)$. In some studies \cite{Santina2019}, the matrix $S$ is referred to as the synergy matrix whose columns describe actuation patterns of the soft robot's input space. Without loss of generality, let the synergy matrix $S$ be defined by a set of linearly independent column vectors of actuation patterns $s_i: \R^n \to \R^n$,
+\noindent where $M(q)$ is the positive definite mass matrix, $c(q,\dot{q})\in \R^{n}$ is a vector of Coriolis forces, $g(q)\in \R^{n}$ a vector of conservative potential forces, $S_a(q) \in \R^{n\times m}$ is a (nonlinear) mapping that projects the active control inputs onto the acceleration space of ${q}$, and $u(t) \in \R^{m}$ is the lower-dimensional control input. Since the system is under-actuated, it shall be clear that $\dim(u) < \dim(q)$. In some studies \cite{Santina2019}, the matrix $S$ is referred to as the synergy matrix whose columns describe actuation patterns of the soft robot's input space. Without loss of generality, let the synergy matrix $S$ be defined by a set of linearly independent column vectors of actuation patterns $s_i: \R^n \to \R^n$,
 \begin{align}
-S(q) := \left[\,s_1(q),\,s_2(q),\,...,\,s_m(q)\,\right], 
+S_a(q) := \left[\,s_1(q),\,s_2(q),\,...,\,s_m(q)\,\right], 
 \end{align}
-which implies that the matrix has $\rank(S) = m$. 
+which implies that the matrix has $\rank(S) = n_a$.
 
 % \section{Operational space formulation}
 % The task of a robotic system is commonly formulated in terms of the end-effector position, velocity, or environmental force. As such, regardless of the dimensionality of the joint space, the control synthesis is typically specified by subpart of the robotic system. Let us introduce a state vector $x \in \R^k$ denoting the task or operational space of the soft robotic system with $\dim(x) < \dim(q)$. Mathematically, the operational space can be described using a continuously differentiable output map $h: \R^n \mapsto \R^k$ such that $x = h(q)$. Differentiation with respect to time gives rise to
